--- a/src/modules/mail/templates/good-bye.hbs
+++ b/src/modules/mail/templates/good-bye.hbs
@@ -1,7 +1,7 @@
 <html lang="id">
   <head>
     <meta charset="UTF-8" />
-    <title>Delete Account Request - Byte Beyond Persona</title>
+    <title>Goodbye - Byte Beyond Persona</title>
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <link
       href="https://fonts.googleapis.com/css2?family=Montserrat:wght@300;400;600;700&display=swap"
@@ -64,7 +64,7 @@
                     font-weight: 300;
                   "
                 >
-                  Secure Account Deletion
+                  Account Deletion Confirmed
                 </p>
               </td>
             </tr>
@@ -94,9 +94,8 @@
                     font-weight: 400;
                   "
                 >
-                  Kami menerima permintaan untuk menghapus akun Anda dari Byte
-                  Beyond Persona. Kami memahami keputusan ini dan menghormati
-                  pilihan Anda.
+                  Akun Anda di Byte Beyond Persona telah berhasil dihapus sesuai
+                  permintaan Anda.
                 </p>
 
                 <p
@@ -107,22 +106,21 @@
                     color: #444444;
                   "
                 >
-                  Dengan mengklik tombol di bawah, akun Anda beserta seluruh
-                  data pribadi akan dihapus secara permanen dari sistem kami.
-                  Tindakan ini tidak dapat dibatalkan.
+                  Terima kasih telah mempercayai kami dan menjadi bagian dari
+                  komunitas Byte Beyond Persona. Kami menghargai waktu yang
+                  telah Anda habiskan bersama kami.
                 </p>
 
                 <p
                   style="
                     margin: 0 0 32px;
-                    font-size: 14px;
+                    font-size: 16px;
                     line-height: 1.8;
-                    color: #666666;
+                    color: #444444;
                   "
                 >
-                  Tautan konfirmasi ini berlaku selama
-                  <strong>15 menit</strong>. Jika Anda tidak melanjutkan, akun
-                  Anda akan tetap aktif.
+                  Jika Anda berubah pikiran di masa mendatang, kami akan dengan
+                  senang hati menyambut Anda kembali.
                 </p>
 
                 <p
@@ -131,46 +129,13 @@
                     font-size: 14px;
                     line-height: 1.6;
                     color: #888888;
-                    border-left: 2px solid #b94a48;
+                    border-left: 2px solid #00a86b;
                     padding-left: 20px;
                   "
                 >
-                  <em>If you did not request account deletion, please ignore
-                    this email.</em>
+                  <em>If this action was not made by you, please contact support
+                    immediately.</em>
                 </p>
-
-                <table cellpadding="0" cellspacing="0" width="100%">
-                  <tr>
-                    <td align="center">
-                      <table cellpadding="0" cellspacing="0">
-                        <tr>
-                          <td
-                            style="
-                              background-color: #b94a48;
-                              border-radius: 0px;
-                            "
-                          >
-                            <a
-                              href="{{deleteAccountLink}}"
-                              style="
-                                display: inline-block;
-                                padding: 20px 50px;
-                                font-size: 14px;
-                                font-weight: 700;
-                                color: #ffffff;
-                                text-decoration: none;
-                                text-transform: uppercase;
-                                letter-spacing: 2px;
-                              "
-                            >
-                              Delete Account
-                            </a>
-                          </td>
-                        </tr>
-                      </table>
-                    </td>
-                  </tr>
-                </table>
 
                 <div
                   style="
@@ -195,10 +160,9 @@
                     line-height: 1.8;
                   "
                 >
-                  Jika Anda tidak meminta penghapusan akun, abaikan email ini.<br
-                  />
-                  <span style="font-size: 10px">If you did not request account
-                    deletion, please ignore this message.</span>
+                  Terima kasih telah mempercayai kami.<br />
+                  <span style="font-size: 10px">Thank you for being with Byte
+                    Beyond Persona.</span>
                 </p>
               </td>
             </tr>
