--- a/src/modules/mail/templates/delete-account-request.hbs
+++ b/src/modules/mail/templates/delete-account-request.hbs
@@ -1,7 +1,7 @@
 <html lang="id">
   <head>
     <meta charset="UTF-8" />
-    <title>Reset Password - Byte Beyond Persona</title>
+    <title>Delete Account Request - Byte Beyond Persona</title>
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <link
       href="https://fonts.googleapis.com/css2?family=Montserrat:wght@300;400;600;700&display=swap"
@@ -64,7 +64,7 @@
                     font-weight: 300;
                   "
                 >
-                  Secure Account Recovery
+                  Secure Account Deletion
                 </p>
               </td>
             </tr>
@@ -94,21 +94,35 @@
                     font-weight: 400;
                   "
                 >
-                  Kami menerima permintaan untuk mengatur ulang kata sandi akun
-                  Anda.
+                  Kami menerima permintaan untuk menghapus akun Anda dari Byte
+                  Beyond Persona. Kami memahami keputusan ini dan menghormati
+                  pilihan Anda.
                 </p>
 
                 <p
                   style="
-                    margin: 0 0 32px;
+                    margin: 0 0 24px;
                     font-size: 16px;
                     line-height: 1.8;
                     color: #444444;
                   "
                 >
-                  Klik tombol di bawah ini untuk melanjutkan proses reset
-                  password. Tautan ini hanya berlaku selama
-                  <strong>15 menit</strong>.
+                  Dengan mengklik tombol di bawah, akun Anda beserta seluruh
+                  data pribadi akan dihapus secara permanen dari sistem kami.
+                  Tindakan ini tidak dapat dibatalkan.
+                </p>
+
+                <p
+                  style="
+                    margin: 0 0 32px;
+                    font-size: 14px;
+                    line-height: 1.8;
+                    color: #666666;
+                  "
+                >
+                  Tautan konfirmasi ini berlaku selama
+                  <strong>15 menit</strong>. Jika Anda tidak melanjutkan, akun
+                  Anda akan tetap aktif.
                 </p>
 
                 <p
@@ -117,12 +131,12 @@
                     font-size: 14px;
                     line-height: 1.6;
                     color: #888888;
-                    border-left: 2px solid #00a86b;
+                    border-left: 2px solid #b94a48;
                     padding-left: 20px;
                   "
                 >
-                  <em>If you did not request this password reset, please ignore
-                    this email. Your account will remain secure.</em>
+                  <em>If you did not request account deletion, please ignore
+                    this email.</em>
                 </p>
 
                 <table cellpadding="0" cellspacing="0" width="100%">
@@ -132,12 +146,12 @@
                         <tr>
                           <td
                             style="
-                              background-color: #00a86b;
+                              background-color: #b94a48;
                               border-radius: 0px;
                             "
                           >
                             <a
-                              href="{{resetPasswordLink}}"
+                              href="{{deleteAccountLink}}"
                               style="
                                 display: inline-block;
                                 padding: 20px 50px;
@@ -149,7 +163,7 @@
                                 letter-spacing: 2px;
                               "
                             >
-                              Reset Password
+                              Delete Account
                             </a>
                           </td>
                         </tr>
@@ -181,10 +195,10 @@
                     line-height: 1.8;
                   "
                 >
-                  Jika Anda tidak meminta reset password, abaikan email ini.<br
+                  Jika Anda tidak meminta penghapusan akun, abaikan email ini.<br
                   />
-                  <span style="font-size: 10px">If you didn't request a password
-                    reset, please ignore this message.</span>
+                  <span style="font-size: 10px">If you did not request account
+                    deletion, please ignore this message.</span>
                 </p>
               </td>
             </tr>
